[gd_scene load_steps=4 format=3 uid="uid://28om5nbxx6qk"]

[ext_resource type="Theme" uid="uid://c21dhy264y6ty" path="res://assets/theme_large.tres" id="1_i5g4x"]
[ext_resource type="Script" path="res://src/ui/display/weather_display.gd" id="1_trqlw"]
[ext_resource type="PackedScene" uid="uid://cxg7equ52kyde" path="res://src/fortune/fortune_hover.tscn" id="2_6i5gj"]

[node name="WeatherDisplay" type="Node2D"]
script = ExtResource("1_trqlw")

[node name="Panel" type="PanelContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_i5g4x")

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Weather"
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="Now" type="VBoxContainer" parent="Panel/VBox/HBox"]
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="Panel/VBox/HBox/Now"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
bbcode_enabled = true
text = "[center]Now"
fit_content = true
autowrap_mode = 0

[node name="FortuneHover" parent="Panel/VBox/HBox/Now" instance=ExtResource("2_6i5gj")]
layout_mode = 2
size_flags_horizontal = 4

[node name="OneTurn" type="VBoxContainer" parent="Panel/VBox/HBox"]
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="Panel/VBox/HBox/OneTurn"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
bbcode_enabled = true
text = "[center]1[img]res://assets/custom/Time32.png[/img]"
fit_content = true
autowrap_mode = 0

[node name="FortuneHover" parent="Panel/VBox/HBox/OneTurn" instance=ExtResource("2_6i5gj")]
layout_mode = 2
size_flags_horizontal = 4

[node name="TwoTurn" type="VBoxContainer" parent="Panel/VBox/HBox"]
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="Panel/VBox/HBox/TwoTurn"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
bbcode_enabled = true
text = "[center]2[img]res://assets/custom/Time32.png[/img]"
fit_content = true
autowrap_mode = 0

[node name="FortuneHover" parent="Panel/VBox/HBox/TwoTurn" instance=ExtResource("2_6i5gj")]
layout_mode = 2
size_flags_horizontal = 4
